--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
     </style>
 </head>
 <body>
+    
+
+
+
+
+<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin_liveness.php"></script>
+<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/ozliveness_main.js?ver=1.6.0-36"></script>
+    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/faceworker.js?ver=1.6.0-36"></script>
+    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-core.js?ver=1.6.0-36"></script>
+<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-converter.js?ver=1.6.0-36"></script>
+    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-backend-wasm.js?ver=1.6.0-36"></script>
+<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/podium.js?ver=1.6.0-36"></script>
+    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-backend-wasm.wasm?ver=1.6.0-36"></script>
+    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/models/jedi/group1-shard1of1.dat"></script>
+    
     <h1>BLS Selfie</h1>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
