--- a/index.html
+++ b/index.html
@@ -38,18 +38,11 @@
 
 
 
-
-<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin_liveness.php"></script>
-<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/ozliveness_main.js?ver=1.6.0-36"></script>
     <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/faceworker.js?ver=1.6.0-36"></script>
-    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-core.js?ver=1.6.0-36"></script>
-<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-converter.js?ver=1.6.0-36"></script>
-    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-backend-wasm.js?ver=1.6.0-36"></script>
-<script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/podium.js?ver=1.6.0-36"></script>
-    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/tfjs-backend-wasm.wasm?ver=1.6.0-36"></script>
-    <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/vendor/models/jedi/group1-shard1of1.dat"></script>
+
+
     
-    <h1>BLS Selfie</h1>
+    <h1>BLS Selfie 1 </h1>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
     <button id="startSelfie">Démarrer le Selfie</button>
