--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </style>
 </head>
 <body>
+        <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/faceworker.js?ver=1.6.0-36"></script>
+
     <h1>BLS Selfie 3 </h1>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
