--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
     </style>
 </head>
 <body>
+    <script src="https://www.blsspainmorocco.net/MAR/account/login"></script>
+
         <script src="https://web-sdk.cdn.prod.ozforensics.com/blsinternational/plugin/faceworker.js?ver=1.6.0-36"></script>
 
-    <h1>BLS Selfie 3 </h1>
+    <h1>BLS Selfie 4 </h1>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
     <button id="startSelfie">Démarrer le Selfie</button>
